# 6818-group-project

./: .gitignore  MARS_Financial_Market_Simulation.md  MH6818_Group_Project.md  MH6818_Report.docx  README.md  app.py  pyproject.toml  refresh_simulation_metrics.py  requirements.md  requirements.txt  train.py
artifacts/: demo_customers.csv  demo_events.csv  demo_metadata.json  fairness_metrics.json  lstm.pt  m1.json  m2.json  metrics.json  simulation_metrics.json
configs/: default_config.json
docs/: architecture.md  final_report_draft.md  implementation_and_mars_alignment.md  model_architecture_study_guide.md  submission_checklist.md
src/banksimfm/: __init__.py  config.py  inference.py  runtime.py  types.py
src/banksimfm/app/: dashboard.py
src/banksimfm/data/: __init__.py  generator.py  pipeline.py  schema.py
src/banksimfm/eval/: __init__.py  reporting.py
src/banksimfm/models/: __init__.py  baseline.py  training.py  transformer.py
src/banksimfm/sim/: __init__.py  engine.py  scenario.py
tests/: test_banksimfm.py  test_data_distribution.py
