[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banksimfm"
version = "0.1.0"
description = "BankSimFM retail banking financial distress simulation prototype"
readme = "requirements.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "plotly>=5.0",
  "scikit-learn>=1.3",
  "streamlit>=1.33",
  "torch>=2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
